--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bois-decopool-dashboard",
+  "name": "dashboard-store-api",
   "private": true,
   "version": "0.0.0",
   "type": "module",
