--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "framer-motion": "^10.16.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
