--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.16.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
