Fixed some bugs. x_0!

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_API=http://localhost:8080/api
-# VITE_ASSETS=http://localhost:8080/assets
+VITE_API=http://localhost:8080/api
+VITE_ASSETS=http://localhost:8080/assets
 
-VITE_API=http://100.115.2.171:8080/api
-VITE_ASSETS=http://100.115.2.171:8080/assets
+# VITE_API=http://100.115.2.171:8080/api
+# VITE_ASSETS=http://100.115.2.171:8080/assets
