--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
