--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
+    "chart.js": "^4.4.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-confirm-alert": "^3.0.6",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
