--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-VITE_API=http://localhost:8080/api
-VITE_ASSETS=http://localhost:8080/assets
+# VITE_API=http://localhost:8080/api
+# VITE_ASSETS=http://localhost:8080/assets
+
+VITE_API=https://store-api-t7we.onrender.com/api
+VITE_ASSETS=https://store-api-t7we.onrender.com/assets
 
 # VITE_API=http://100.115.2.171:8080/api
 # VITE_ASSETS=http://100.115.2.171:8080/assets
